<?xml version="1.0"?>
<package format="2">
  <name>hiwonder_bringup</name>
  <version>0.0.0</version>
  <description>The hiwonder_bringup package</description>

  <maintainer email="hiwonder@todo.todo">hiwonder</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>hiwonder_app</depend>
  <depend>hiwonder_controller</depend>
  <depend>astra_camera</depend>

  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
